--- a/escape-road-2.html
+++ b/escape-road-2.html
@@ -226,7 +226,7 @@
 <h2>Conclusion</h2>
 <p><strong>Escape Road 2</strong> offers an adrenaline-pumping experience filled with thrilling chases and strategic gameplay. With its engaging features, varied terrains, and challenging mechanics, it promises hours of entertainment. By mastering the controls and employing smart strategies, players can successfully evade the police and become legends on the road. Are you ready to take on the challenge?</p>
 <p><strong>Where can I play Escape Road 2?</strong></p>
-<p>H&atilde;y truy cập website&nbsp;<a href="https://escaperoad2.org/">escaperoad2.org</a> v&agrave; chọn <a href="https://escaperoad2.org/escape-road-2">Escape Road 2</a>&nbsp;để chơi. Đ&acirc;y l&agrave; một tr&ograve; chơi trực tuyến miễn ph&iacute;</p>                                                            </div>
+<p>H&atilde;y Go website&nbsp;<a href="https://escaperoad2.org/">escaperoad2.org</a> v&agrave; select <a href="https://escaperoad2.org/escape-road-2">Escape Road 2</a>&nbsp;to play;</p>                                                            </div>
                         </div>
                     </div>
                 </div>
