--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                                 </a>
                             </li>
                                                     <li>
-                                <a class="menu-link" href="/escape-road-2">
-                                    <span class="text-menu-link">Escape Road 2</span>
+                                <a class="menu-link" href="/escape-road">
+                                    <span class="text-menu-link">Escape Road</span>
                                 </a>
                             </li>
                                             </ul>
