--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                             </div>
                             <div class="text-area--content">
                                 <h2>About Escape Road 2</h2><p><strong>Escape Road 2</strong> is an exhilarating driving game that plunges players into the heart of a high-stakes police chase. With breathtaking action and non-stop chases, players must showcase their super-driving skills to become legends on dangerous roads.</p>
-<h2>How to Play Escape Road 2</h2>
+<h2>How to Play <a href="https://escaperoad2.github.io">Escape Road 2</a></h2>
 <ul>
 <li><strong>Left Arrow or A</strong>: Move the car left.</li>
 <li><strong>Right Arrow or D</strong>: Move the car right.</li>
@@ -235,7 +235,8 @@
 <h2>Conclusion</h2>
 <p><strong>Escape Road 2</strong> offers an adrenaline-pumping experience filled with thrilling chases and strategic gameplay. With its engaging features, varied terrains, and challenging mechanics, it promises hours of entertainment. By mastering the controls and employing smart strategies, players can successfully evade the police and become legends on the road. Are you ready to take on the challenge?</p>
 <p><strong>Where can I play Escape Road 2?</strong></p>
-<p>H&atilde;y truy cập website&nbsp;<a href="https://escaperoad2.org/">escaperoad2.org</a> v&agrave; chọn <a href="https://escaperoad2.org/escape-road-2">Escape Road 2</a>&nbsp;để chơi. Đ&acirc;y l&agrave; một tr&ograve; chơi trực tuyến miễn ph&iacute;</p>                                                            </div>
+                             <p>Go to&nbsp;<a href="https://escaperoad2.org">escaperoad2.org</a> and choose Escape Road 2 to play. This is a free online game</p>                        
+			    </div>
                         </div>
                     </div>
                 </div>
