--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 <h2>Conclusion</h2>
 <p><strong>Escape Road 2</strong> offers an adrenaline-pumping experience filled with thrilling chases and strategic gameplay. With its engaging features, varied terrains, and challenging mechanics, it promises hours of entertainment. By mastering the controls and employing smart strategies, players can successfully evade the police and become legends on the road. Are you ready to take on the challenge?</p>
 <p><strong>Where can I play Escape Road 2?</strong></p>
-                             <p>Go to&nbsp;<a href="https://escaperoad2.org">escaperoad2.org</a> and choose Escape Road 2 to play. This is a free online game</p>                        
+                             <p>Go to<a href="https://escaperoad2.org">escaperoad2.org</a> and choose Escape Road 2 to play. This is a free online game</p>                        
 			    </div>
                         </div>
                     </div>
