--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                             </div>
                             <div class="text-area--content">
                                 <h2>About Escape Road 2</h2><p><strong>Escape Road 2</strong> is an exhilarating driving game that plunges players into the heart of a high-stakes police chase. With breathtaking action and non-stop chases, players must showcase their super-driving skills to become legends on dangerous roads.</p>
-<h2>How to Play <a href="https://escaperoad2.github.io">Escape Road 2</a></h2>
+<h2>How to Play <a href="https://escaperoad2.org">Escape Road 2</a></h2>
 <ul>
 <li><strong>Left Arrow or A</strong>: Move the car left.</li>
 <li><strong>Right Arrow or D</strong>: Move the car right.</li>
