--- a/escape-road.html
+++ b/escape-road.html
@@ -207,8 +207,8 @@
                                 </div>
                             </div>
                             <div class="text-area--content">
-                                <h2>About Escape Road</h2><p><strong>Escape Road 2</strong> is an exhilarating game that places you in the shoes of a daring bank robber. With thrilling missions and intense police chases, this game promises to keep your adrenaline pumping. Navigate through crowded streets, collect coins, and showcase your driving skills as you attempt to evade capture.</p>
-<h2>Gameplay Mechanics Of Escape Road 2</h2>
+                                <h2>About Escape Road</h2><p><strong>Escape Road </strong> is an exhilarating game that places you in the shoes of a daring bank robber. With thrilling missions and intense police chases, this game promises to keep your adrenaline pumping. Navigate through crowded streets, collect coins, and showcase your driving skills as you attempt to evade capture.</p>
+<h2>Gameplay Mechanics Of Escape Road </h2>
 <h3>&nbsp;Controls</h3>
 <ul>
 <li><strong>WASD or Arrow Keys</strong>: Use these keys to maneuver your escape car.</li>
@@ -223,7 +223,7 @@
 <li><strong>Collect Coins</strong>: Gather coins scattered throughout the streets to boost your score and unlock upgrades.</li>
 <li><strong>Escape the Police</strong>: Outrun the police cars that are hot on your tail. Use your driving skills to navigate through traffic and find shortcuts.</li>
 </ul>
-<h2>Tips For Success&nbsp;Escape Road 2</h2>
+<h2>Tips For Success&nbsp;Escape Road </h2>
 <ul>
 <li><strong>Master the Controls</strong>: Spend time practicing your driving skills to handle tight corners and avoid collisions.</li>
 <li><strong>Plan Your Route</strong>: Look for the best escape routes that minimize your chances of getting caught.</li>
@@ -231,7 +231,7 @@
 <li><strong>Stay Calm Under Pressure</strong>: The thrill of the chase can be intense. Maintain your composure to make quick decisions and escape successfully.</li>
 </ul>
 <h2>Conclusion</h2>
-<p><strong>Escape Road 2</strong> is not just a game; it&rsquo;s an adrenaline-fueled adventure that tests your driving skills and strategic thinking. Whether you&rsquo;re a seasoned gamer or a newcomer, this game offers an exciting challenge. So buckle up, hit the gas, and prepare for the ultimate bank heist experience.</p>                                                            </div>
+<p><strong>Escape Road </strong> is not just a game; it&rsquo;s an adrenaline-fueled adventure that tests your driving skills and strategic thinking. Whether you&rsquo;re a seasoned gamer or a newcomer, this game offers an exciting challenge. So buckle up, hit the gas, and prepare for the ultimate bank heist experience.</p>                                                            </div>
                         </div>
                     </div>
                 </div>
