--- a/battle-arena-race-to-win.html
+++ b/battle-arena-race-to-win.html
@@ -85,7 +85,7 @@
             <div class="main-flex">
                 <div class="row">
                     <div class="frame-box-game">
-                        <iframe title="Battle Arena Race To Win" id="iframehtml5" class="d-block" width="100%" height="600px" target="_parent" src="https://html5.gamedistribution.com/4597f4ca77b4438e9ca675e4a76bf655/?gd_sdk_referrer_url=https://www.hahagames.com/game/battle-arena-race-to-win" frameborder="0" border="0" scrolling="no" allowfullscreen=""></iframe>
+                        <iframe title="Battle Arena Race To Win" id="iframehtml5" class="d-block" width="100%" height="600px" target="_parent" src="https://play.gamepix.com/battle-arena-race-to-win/embed?sid=e4515" frameborder="0" border="0" scrolling="no" allowfullscreen=""></iframe>
                         <div class="header-game">
                             <div class="box-header">
                                 <h1>Battle Arena Race To Win</h1>
