--- a/demolition-derby-2.html
+++ b/demolition-derby-2.html
@@ -85,7 +85,7 @@
             <div class="main-flex">
                 <div class="row">
                     <div class="frame-box-game">
-                        <iframe title="Demolition Derby 2" id="iframehtml5" class="d-block" width="100%" height="600px" target="_parent" src="<iframe id="game-iframe" src="https://play.gamepix.com/demolition-derby-racing/embed?sid=e4515"</iframe>
+                        <iframe title="Demolition Derby 2" id="iframehtml5" class="d-block" width="100%" height="600px" target="_parent" src="<iframe id="game-iframe" src="https://play.gamepix.com/demolition-derby-racing/embed?sid=e4515"frameborder="0" border="0" scrolling="no" allowfullscreen=""></iframe>
                         <div class="header-game">
                             <div class="box-header">
                                 <h1>Demolition Derby 2</h1>
