--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title>Escape Road 2 - Escape road 2</title>
     <meta name="keywords" content="escape road 2">
     <meta name="news_keywords" content="escape road 2">
-    <meta name="description" content="Escape Road 2 - Escape road 2">
+    <meta name="description" content="Join the thrilling adventure of Escape Road 2, where you solve puzzles and navigate challenges to escape danger and uncover hidden secrets in every level">
     <link rel="stylesheet" type="text/css" href="rs/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
